# Teddy

./: CMakeLists.txt  README.md  README.txt  Teddy.sublime-project  teddy.sln
cmake/: FindOpenMesh.cmake
src/: CMakeLists.txt  main.cpp  qtwin.cpp  talgorithms.h  tcanvas.cpp  tcanvas.h  tmainwind.cpp  tmainwind.h  tmainwind.qrc  tmesh.cpp  tmesh.h  tscene.cpp
teddy/: main.cpp  ss.off  talgorithms.cpp  tcanvas.cpp  teddy.vcproj  tmainwind.cpp  tmainwind.h  tmainwind.qrc  tmainwind.ui  tmesh.cpp  tmesh.h  tscene.cpp  tscene.h
